--- a/configs.ini.example
+++ b/configs.ini.example
@@ -1,5 +1,5 @@
 [SERIAL]
-; Set port to auto, demo, or the path (e.g., /dev/ttyAMA0).
+; Set port to "demo" or the path (e.g., /dev/ttyUSB0).
 port = demo
 
 [TOTAL STATION]
